# mozzo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  config.yml  mozzo.py  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml  pytest.yml  sync-back.yml
src/mozzo/: cli.py
tests/: README.md  TEST_VALUE_ANALYSIS.md  __init__.py  conftest.py  test_phase1_helpers.py  test_phase2_helpers.py  test_phase3_helpers.py  test_phase4_helpers.py  test_phase5_helpers.py  test_phase6_helpers.py  test_smoke.py
